# libhttp-ev

./: .gitignore  CMakeLists.txt  README.md  State Diagram.dot
.github/workflows/: cmake.yml
cmake/: FindNettle.cmake
include/: http.h
src/: context.c  context.h  event_callback.c  event_callback.h  http.c  http.h  parser.c  parser.h  websocket.c  websocket.h
test/: test.cpp
